demo/src/main/java/com/example/demo/global/error/exception/CustomException.java
package com.example.demo.global.error.exception;

import com.example.demo.global.error.ErrorCode;
import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class CustomException extends RuntimeException {
    private final ErrorCode errorCode;
}